kubernetes/apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:1.43.4.10903-e5521bd8c # {"$imagepolicy": "apps:plex"}
          ports:
            - containerPort: 32400
          volumeMounts:
            - mountPath: /config
              name: config-directory
            - mountPath: "/config/Library/Application Support/Plex Media Server/Preferences.xml"
              name: config-map
              subPath: Preferences.xml
              readOnly: true
            - mountPath: /data/movies
              name: video
              subPath: movies
              readOnly: true
            - mountPath: /data/audiobooks
              name: audio
              subPath: audiobooks
              readOnly: true
            - mountPath: /data/music
              name: audio
              subPath: music
              readOnly: true
            - mountPath: /data/shows
              name: video
              subPath: shows
              readOnly: true
      volumes:
        - name: config-directory
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: config-map
          secret:
            secretName: plex-preferences
            items:
              - key: Preferences.xml
                path: Preferences.xml
        - name: audio
          persistentVolumeClaim:
            claimName: audio-rw-pvc
        - name: video
          persistentVolumeClaim:
            claimName: video-pvc
