kubernetes/apps/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app.kubernetes.io/name: plex
  ports:
    - protocol: TCP
      port: 32400
